--- a/blog/package.json
+++ b/blog/package.json
@@ -12,6 +12,7 @@
     "config-lite": "^1.5.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
+    "ejs": "^2.5.6",
     "express": "^4.14.1",
     "express-formidable": "^1.0.0",
     "express-winston": "^2.2.0",
